--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Lakshan R</title>
     <meta charset="UTF-8">
-    <link rel="icon" href="icons8-l-64 (1).png">
+    <link rel="icon" href="HTML/icons8-l-64%20(1).png">
     <meta name="keywords" content="IJSE,GDSE,HTML,ABCD,Lakshan">
     <meta name="description" content="Nice to meet you, Lakshan Rashmika! As a software engineer, you can generate a placeholde">
     <meta name="owner " content="IJSE">
