--- a/Case.html
+++ b/Case.html
@@ -17,13 +17,32 @@
     </section>
 
     <section>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
+        <pre>
+            Hello I’m
+            Lakshan Rashmika
+
+            I am currently studying for a software engineer
+            diploma at IJSE and I am also studying other subjects.
+            I am twenty one years old
+        </pre>
+    </section>
+
+    <section>
         <hgroup>
-            <h1>Features</h1>
+            <pre>
+                <h1>Features</h1>
+                Ultimate Work Flow
+
+                Make More Time For The Word That Matters Most
+
+
+            </pre>
         </hgroup>
+        <article></article>
+        <article></article>
+        <article></article>
+        <article></article>
+
         <article></article>
     </section>
 
@@ -33,7 +52,21 @@
             <hgroup>
                 <h1>About Me</h1>
             </hgroup>
-            <article></article>
+            <pre>
+                I  Can Develop
+                That Help People
+
+                Hello I am Lakshan Rashmika I began my Software engineer
+                life in 2021. I've spent most of my waking hours for the last
+                years designing, programming and operating web sites. I have acquired
+                the skills and knowledge necessary to make your project a success.
+                I enjoy every step of the design process, from discussion and
+                collaboration.
+
+                Name : Lakshan Rashmika       Address : Matara,Sri Lanka
+                Age : 21 Years                Email : lakshanrashmika16302@gmail.com
+                Contact : +94 71 3988 628     Linked in : Lakshan Rashmika
+                </pre>
         </section>
     </section>
 
@@ -56,41 +89,66 @@
 
     <section>
         <hgroup>
-            <h1>My Expertise</h1>
+            <pre>
+                <h1>My Expertise</h1>
+                What Can I Do For Your Needs
+
+                        Some understanding of software application concept, design,
+                evaluation and maintenance. To create software solutions for end users,
+                software engineers have little understanding of their programming
+                languages
+
+                <div>
+                    <p>
+                        Web Design                        Enterprise Application                 UI / UX Designing
+
+                        Develop any kind of                Create Modern                         Design is the main
+                        web application either             Enterprise Application                thing of a application.
+                        to conduct your                    that reliable and                     Pay more attention
+                        business activities                consistency with                      to the UI / UX part
+                        or to promote your                 awesome ideas.                        of the Software
+                        business.                                                                with eyecatching colors.
+
+
+                        IOT Based Application              Graphic Designing                    Software Development
+
+                        Discover the Next                  The best designer                    Software Development
+                        Generation of the                  can change everything                Services means the design,
+                        human world.                       in the artwork.                      development, maintenance,
+                        mI think graphic designers         are like a magician                  implementation
+                                                           in this field.
+                    </p>
+                </div>
+            </pre>
+
+
         </hgroup>
-        <article></article>
-        <section>
-            <article></article>
-        </section>
-        <section>
-            <article></article>
-        </section>
-        <section>
-            <article></article>
-        </section>
-        <section>
-            <article></article>
-        </section>
-        <section>
-            <article></article>
-        </section>
-        <section>
-            <article></article>
-        </section>
+
+
+
     </section>
 
     <section>
         <hgroup>
+            <pre>
             <h1>Projects and Assignments</h1>
+
+            Recent Works That I Do
+
+            Showing you the most valuable services available from us and the projects and Assignments  I have created
+            </pre>
         </hgroup>
-        <article></article>
         <nav></nav>
+
     </section>
 
     <section>
         <hgroup>
             <h1>Blog</h1>
         </hgroup>
+        <article>
+            My General Life
+        </article>
         <section></section>
     </section>
 
