--- a/Case.html
+++ b/Case.html
@@ -53,8 +53,10 @@
                 <h1>About Me</h1>
             </hgroup>
             <pre>
+                <h2>
                 I  Can Develop
                 That Help People
+                    </h2>
 
                 Hello I am Lakshan Rashmika I began my Software engineer
                 life in 2021. I've spent most of my waking hours for the last
@@ -155,6 +157,10 @@
     <section>
         <hgroup>
             <h1>Contact Me</h1>
+            <p>
+                <a href="lakshanrashmika16302@gmail.com" >Send Me an Email</a>
+                Call me <a href="tel:+94713988628">GO</a>
+            </p>
         </hgroup>
         <adderss></adderss>
     </section>
