--- a/Case.html
+++ b/Case.html
@@ -3,32 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Case</title>
-</head>
-<body>
 
-<hader>
-    <nav></nav>
-</hader>
+    <hader>
+        <nav></nav>
+    </hader>
 
-<main>
-    <section>
+    <main>
+        <section>
 
-        <asid></asid>
-    </section>
+            <asid></asid>
+        </section>
 
-    <section>
+        <section>
         <pre>
             Hello I’m
             Lakshan Rashmika
 
-            I am currently studying for a software engineer
-            diploma at IJSE and I am also studying other subjects.
+                I am currently studying for a software engineer<br>
+            diploma at IJSE and I am also studying other subjects.<br>
             I am twenty one years old
         </pre>
-    </section>
+        </section>
 
-    <section>
-        <hgroup>
+        <section>
+            <hgroup>
             <pre>
                 <h1>Features</h1>
                 Ultimate Work Flow
@@ -37,137 +35,132 @@
 
 
             </pre>
-        </hgroup>
-        <article></article>
-        <article></article>
-        <article></article>
-        <article></article>
-
-        <article></article>
-    </section>
-
-    <section>
-        <aside></aside>
-        <section>
-            <hgroup>
-                <h1>About Me</h1>
             </hgroup>
-            <pre>
+            <article></article>
+            <article></article>
+            <article></article>
+            <article></article>
+
+            <article></article>
+        </section>
+
+        <section>
+            <aside></aside>
+            <section>
+                <hgroup>
+                    <h1>About Me</h1>
+                </hgroup>
+                <pre>
                 <h2>
                 I  Can Develop
                 That Help People
                     </h2>
 
-                Hello I am Lakshan Rashmika I began my Software engineer
-                life in 2021. I've spent most of my waking hours for the last
-                years designing, programming and operating web sites. I have acquired
-                the skills and knowledge necessary to make your project a success.
-                I enjoy every step of the design process, from discussion and
+                        Hello I am Lakshan Rashmika I began my Software engineer<br>
+                life in 2021. I've spent most of my waking hours for the last<br>
+                years designing, programming and operating web sites. I have acquired<br>
+                the skills and knowledge necessary to make your project a success.<br>
+                I enjoy every step of the design process, from discussion and<br>
                 collaboration.
 
                 Name : Lakshan Rashmika       Address : Matara,Sri Lanka
                 Age : 21 Years                Email : lakshanrashmika16302@gmail.com
                 Contact : +94 71 3988 628     Linked in : Lakshan Rashmika
                 </pre>
+            </section>
         </section>
-    </section>
 
-    <section>
         <section>
-            <hgroup>
-                <h1>Education</h1>
-            </hgroup>
+            <section>
+                <hgroup>
+                    <h1>Education</h1>
+                </hgroup>
+                <section></section>
+            </section>
+
+            <section>
+                <hgroup>
+                    <h1>Languages</h1>
+                </hgroup>
+            </section>
             <section></section>
+
         </section>
 
         <section>
             <hgroup>
-                <h1>Languages</h1>
-            </hgroup>
-        </section>
-        <section></section>
-
-    </section>
-
-    <section>
-        <hgroup>
             <pre>
                 <h1>My Expertise</h1>
                 What Can I Do For Your Needs
 
-                        Some understanding of software application concept, design,
-                evaluation and maintenance. To create software solutions for end users,
-                software engineers have little understanding of their programming
+                        Some understanding of software application concept, design,<br>
+                evaluation and maintenance. To create software solutions for end users,<br>
+                software engineers have little understanding of their programming<br>
                 languages
+
+
+                web design
+
+                Develop any kind of <br>
+                web application either<br>
+                to conduct your business<br>
+                activities or to promote<br>
+                your business.
 
                 <div>
                     <p>
-                        Web Design                        Enterprise Application                 UI / UX Designing
 
-                        Develop any kind of                Create Modern                         Design is the main
-                        web application either             Enterprise Application                thing of a application.
-                        to conduct your                    that reliable and                     Pay more attention
-                        business activities                consistency with                      to the UI / UX part
-                        or to promote your                 awesome ideas.                        of the Software
-                        business.                                                                with eyecatching colors.
-
-
-                        IOT Based Application              Graphic Designing                    Software Development
-
-                        Discover the Next                  The best designer                    Software Development
-                        Generation of the                  can change everything                Services means the design,
-                        human world.                       in the artwork.                      development, maintenance,
-                        mI think graphic designers         are like a magician                  implementation
-                                                           in this field.
                     </p>
                 </div>
             </pre>
 
+            </hgroup>
 
-        </hgroup>
+        </section>
 
-
-
-    </section>
-
-    <section>
-        <hgroup>
+        <section>
+            <hgroup>
             <pre>
             <h1>Projects and Assignments</h1>
 
             Recent Works That I Do
 
-            Showing you the most valuable services available from us and the projects and Assignments  I have created
+                Showing you the most valuable services available from us and the<br>
+                projects and Assignments  I have created
             </pre>
-        </hgroup>
-        <nav></nav>
+            </hgroup>
+            <nav></nav>
 
-    </section>
+        </section>
 
-    <section>
-        <hgroup>
-            <h1>Blog</h1>
-        </hgroup>
-        <article>
-            My General Life
-        </article>
-        <section></section>
-    </section>
+        <section>
+            <hgroup>
+                <h1>Blog</h1>
+            </hgroup>
+            <article>
+                My General Life
+            </article>
+            <section></section>
+        </section>
 
-    <section>
-        <hgroup>
-            <h1>Contact Me</h1>
-            <p>
-                <a href="lakshanrashmika16302@gmail.com" >Send Me an Email</a>
-                Call me <a href="tel:+94713988628">GO</a>
-            </p>
-        </hgroup>
-        <adderss></adderss>
-    </section>
+        <section>
+            <hgroup>
+                <h1>Contact Me</h1>
+                <p>
+                    <a href="lakshanrashmika16302@gmail.com" >Send Me an Email</a>
+                    Call me <a href="tel:+94713988628">GO</a>
+                </p>
+            </hgroup>
+            <adderss></adderss>
+        </section>
 
-</main>
-<footer></footer>
+    </main>
+    <footer></footer>
 
+
+
+</head>
+<body>
 
 </body>
 </html>
