--- a/Case.html
+++ b/Case.html
@@ -15,31 +15,63 @@
         </section>
 
         <section>
-        <pre>
-            Hello I’m
-            Lakshan Rashmika
+            <mark>Hello I'm </mark>
+            <h1>Lakshan <spam style="color: lightblue" :> Rashmika</spam></h1>
+        <p>
 
                 I am currently studying for a software engineer<br>
             diploma at IJSE and I am also studying other subjects.<br>
             I am twenty one years old
-        </pre>
+
+        </p>
         </section>
 
         <section>
             <hgroup>
-            <pre>
-                <h1>Features</h1>
+            <p>
+                <h2>Features</h2>
                 Ultimate Work Flow
-
+                <p>
                 Make More Time For The Word That Matters Most
+                </p>
+
+                <h5>Awesome Ideas</h5>
+                <p>
+                    Present awesome <br>
+                    ideas while engaging <br>
+                    projects
+                </p>
+
+                <h5>High Quality</h5>
+                <p>
+                    Maintaining the quality <br>
+                    and the neat of <br>
+                    the project
+                </p>
+
+                <h5>Working on Time</h5>
+                <p>
+                    Finalise projects <br>
+                    on time and high <br>
+                    accuracy
+                </p>
+
+                <h5>Quality <br>
+                    Communication</h5>
+                <p>
+                    Friendly and Quality <br>
+                    Communication among <br>
+                    Teammates
+                </p>
 
 
-            </pre>
+
+            </p>
             </hgroup>
-            <article></article>
-            <article></article>
-            <article></article>
-            <article></article>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
 
             <article></article>
         </section>
@@ -50,7 +82,7 @@
                 <hgroup>
                     <h1>About Me</h1>
                 </hgroup>
-                <pre>
+                <p>
                 <h2>
                 I  Can Develop
                 That Help People
@@ -63,10 +95,13 @@
                 I enjoy every step of the design process, from discussion and<br>
                 collaboration.
 
+                <pre>
                 Name : Lakshan Rashmika       Address : Matara,Sri Lanka
                 Age : 21 Years                Email : lakshanrashmika16302@gmail.com
                 Contact : +94 71 3988 628     Linked in : Lakshan Rashmika
                 </pre>
+                </p>
+
             </section>
         </section>
 
@@ -74,6 +109,33 @@
             <section>
                 <hgroup>
                     <h1>Education</h1>
+                    <h2>My Resume</h2>
+
+                    <h5>2007-2018</h5>
+                    <p>
+                        G.C.E Ordinary Level Examination <br>
+                        St. Thomas' College, Matara
+                    </p>
+
+                    <h5>2018-2021</h5>
+                    <p>
+                        G.C.E Advanced Level Examination <br>
+                        St. Thomas' College, Matara
+                    </p>
+
+                    <h5>2021-2024</h5>
+                    <p>
+                        Graduate Diploma in Software Engineering <br>
+                        Institute of Java Software Engineering
+                    </p>
+
+                    <h5>2024-2025</h5>
+                    <p>
+                        Software Engineering Degree <br>
+                        Institute of Java Software Engineering
+                    </p>
+
+
                 </hgroup>
                 <section></section>
             </section>
@@ -89,30 +151,90 @@
 
         <section>
             <hgroup>
-            <pre>
+
                 <h1>My Expertise</h1>
                 What Can I Do For Your Needs
 
+                <p>
                         Some understanding of software application concept, design,<br>
                 evaluation and maintenance. To create software solutions for end users,<br>
                 software engineers have little understanding of their programming<br>
                 languages
 
-
-                web design
-
-                Develop any kind of <br>
-                web application either<br>
-                to conduct your business<br>
-                activities or to promote<br>
-                your business.
+                </p>
 
                 <div>
+                    <h5> web design</h5>
                     <p>
+                        Develop any kind of <br>
+                        web application either<br>
+                        to conduct your business<br>
+                        activities or to promote<br>
+                        your business.
 
                     </p>
                 </div>
-            </pre>
+
+                <div>
+                    <h5> Enterprise Application</h5>
+                    <p>
+                        Create Modern Enterprise <br>
+                        Application that reliable <br>
+                        and consistency with <br>
+                        awesome ideas.
+
+                    </p>
+                </div>
+
+                <div>
+                    <h5> UI / UX Designing</h5>
+                    <p>
+                        Design is the main <br>
+                        thing of a application. <br>
+                        Pay more attention to <br>
+                        the UI / UX part of the <br>
+                        Software with eyecatching <br>
+                        colors.
+
+                    </p>
+                </div>
+
+                <div>
+                    <h5> IOT Based Application</h5>
+                    <p>
+                        Discover the Next <br>
+                        Generation of the <br>
+                        human world.
+
+                    </p>
+                </div>
+
+                <div>
+                    <h5> Graphic Designing</h5>
+                    <p>
+                        The best designer <br>
+                        can change everything <br>
+                        in the artwork. <br>
+                        I think graphic <br>
+                        designers are like <br>
+                        a magician in this <br>
+                        field.
+
+                    </p>
+                </div>
+
+                <div>
+                    <h5> Software Development</h5>
+                    <p>
+                        Software Development <br>
+                        Services means the <br>
+                        design, development, <br>
+                        maintenance, <br>
+                        implementation
+
+                    </p>
+                </div>
+
 
             </hgroup>
 
@@ -147,7 +269,7 @@
             <hgroup>
                 <h1>Contact Me</h1>
                 <p>
-                    <a href="lakshanrashmika16302@gmail.com" >Send Me an Email</a>
+                    <a href="mailto:lakshanrashmika16302@gmail.com">Send Me an Email</a>
                     Call me <a href="tel:+94713988628">GO</a>
                 </p>
             </hgroup>
