--- a/Case.html
+++ b/Case.html
@@ -6,6 +6,12 @@
 
     <hader>
         <nav></nav>
+        <a href="#Home"><spam style = "color: darkblue":> Home</spam></a><br>
+        <a href="#About Me"><spam style = "color: darkblue":> About Me</spam></a><br>
+        <a href="#Education"><spam style = "color: darkblue":> Education</spam></a><br>
+        <a href="#Project"><spam style = "color: darkblue":> Project</spam></a><br>
+        <a href="#Blog"><spam style = "color: darkblue":> Blog</spam></a><br>
+        <a href="#Contact Me"><spam style = "color: darkblue":> Contact Me</spam></a><br>
     </hader>
 
     <main>
@@ -80,7 +86,7 @@
             <aside></aside>
             <section>
                 <hgroup>
-                    <h1>About Me</h1>
+                    <h1>About Me<bfn id = "About Me"></bfn></h1>
                 </hgroup>
                 <p>
                 <h2>
@@ -108,7 +114,7 @@
         <section>
             <section>
                 <hgroup>
-                    <h1>Education</h1>
+                    <h1>Education<bfn id = "Education"></bfn></h1>
                     <h2>My Resume</h2>
 
                     <h5>2007-2018</h5>
@@ -153,7 +159,7 @@
             <hgroup>
 
                 <h1>My Expertise</h1>
-                What Can I Do For Your Needs
+               <h2> What Can I Do For Your Needs</h2>
 
                 <p>
                         Some understanding of software application concept, design,<br>
@@ -242,14 +248,19 @@
 
         <section>
             <hgroup>
-            <pre>
-            <h1>Projects and Assignments</h1>
 
-            Recent Works That I Do
+                <h1>Projects and Assignments<bfn id = "Project"></bfn></h1>
 
+
+            <h2>Recent Works That I Do</h2>
+            <p>
                 Showing you the most valuable services available from us and the<br>
                 projects and Assignments  I have created
-            </pre>
+            </p>
+                <ul>
+                    <li>A - <a href="assignments/23780.zip" download="download pdf1">Download project File</a></li>
+
+                </ul>
             </hgroup>
             <nav></nav>
 
@@ -257,17 +268,18 @@
 
         <section>
             <hgroup>
-                <h1>Blog</h1>
+                <h1>Blog<bfn id = "Blog"></bfn></h1>
+                <h2>My General Life</h2>
             </hgroup>
             <article>
-                My General Life
+
             </article>
             <section></section>
         </section>
 
         <section>
             <hgroup>
-                <h1>Contact Me</h1>
+                <h1>Contact Me<bfn id = "Contact Me"></bfn></h1>
                 <p>
                     <a href="mailto:lakshanrashmika16302@gmail.com">Send Me an Email</a>
                     Call me <a href="tel:+94713988628">GO</a>
