--- a/Case.html
+++ b/Case.html
@@ -281,8 +281,19 @@
             <hgroup>
                 <h1>Contact Me<bfn id = "Contact Me"></bfn></h1>
                 <p>
-                    <a href="mailto:lakshanrashmika16302@gmail.com">Send Me an Email</a>
-                    Call me <a href="tel:+94713988628">GO</a>
+                <h4>Contact Number</h4>
+                <a href="tel:+94713988628">+94713988628</a>
+
+                <h4>Email</h4>
+                <a href="mailto:lakshanrashmika16302@gmail.com">lakshanrashmika16302@gmail.com</a>
+
+                <h4>Your Name :</h4>
+                <h4>Email :</h4>
+                <h4>Massage :</h4>
+                <h4>Follow Me :</h4>
+                <h4>submit</h4>
+
+
                 </p>
             </hgroup>
             <adderss></adderss>
