--- a/Case.html
+++ b/Case.html
@@ -21,6 +21,8 @@
         </section>
 
         <section>
+            <img width="1341" height="780" src="assets/Frame 2.png" alt="lakshan">
+            <img width="500"  src="assets/Frame 2 (1).png" alt="lakshan">
             <mark>Hello I'm </mark>
             <h1>Lakshan <spam style="color: lightblue" :> Rashmika</spam></h1>
         <p>
@@ -35,19 +37,20 @@
         <section>
             <hgroup>
             <p>
+
                 <h2>Features</h2>
                 Ultimate Work Flow
                 <p>
                 Make More Time For The Word That Matters Most
                 </p>
-
+                <img width="64"  src="assets/icons8-ideas-64 (1).png" alt="lakshan">
                 <h5>Awesome Ideas</h5>
                 <p>
                     Present awesome <br>
                     ideas while engaging <br>
                     projects
                 </p>
-
+                <img width="64"  src="assets/icons8-quality-94.png" alt="lakshan">
                 <h5>High Quality</h5>
                 <p>
                     Maintaining the quality <br>
@@ -55,13 +58,14 @@
                     the project
                 </p>
 
+                <img width="64"  src="assets/icons8-time-machine-80.png" alt="lakshan">
                 <h5>Working on Time</h5>
                 <p>
                     Finalise projects <br>
                     on time and high <br>
                     accuracy
                 </p>
-
+                <img width="64"  src="assets/icons8-communication-64.png" alt="lakshan">
                 <h5>Quality <br>
                     Communication</h5>
                 <p>
@@ -74,10 +78,6 @@
 
             </p>
             </hgroup>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
 
             <article></article>
         </section>
@@ -86,6 +86,7 @@
             <aside></aside>
             <section>
                 <hgroup>
+                    <img width="400"  src="assets/IMG-20230128-WA0033.jpg" alt="lakshan">
                     <h1>About Me<bfn id = "About Me"></bfn></h1>
                 </hgroup>
                 <p>
@@ -118,11 +119,13 @@
                     <h2>My Resume</h2>
 
                     <h5>2007-2018</h5>
+                    <img width="50"  src="assets/icons8-pass-fail-96.png" alt="lakshan">
                     <p>
                         G.C.E Ordinary Level Examination <br>
                         St. Thomas' College, Matara
                     </p>
 
+                    <img width="50"  src="assets/icons8-examination-64.png" alt="lakshan">
                     <h5>2018-2021</h5>
                     <p>
                         G.C.E Advanced Level Examination <br>
@@ -130,11 +133,13 @@
                     </p>
 
                     <h5>2021-2024</h5>
+                    <img width="50"  src="assets/icons8-diploma-94.png" alt="lakshan">
                     <p>
                         Graduate Diploma in Software Engineering <br>
                         Institute of Java Software Engineering
                     </p>
 
+                    <img width="50"  src="assets/icons8-degree-94.png" alt="lakshan">
                     <h5>2024-2025</h5>
                     <p>
                         Software Engineering Degree <br>
@@ -170,6 +175,7 @@
                 </p>
 
                 <div>
+                    <img width="128"  src="assets/design.png" alt="lakshan">
                     <h5> web design</h5>
                     <p>
                         Develop any kind of <br>
@@ -182,6 +188,7 @@
                 </div>
 
                 <div>
+                    <img width="128"  src="assets/application.png" alt="lakshan">
                     <h5> Enterprise Application</h5>
                     <p>
                         Create Modern Enterprise <br>
@@ -193,6 +200,7 @@
                 </div>
 
                 <div>
+                    <img width="128"  src="assets/design.png" alt="lakshan">
                     <h5> UI / UX Designing</h5>
                     <p>
                         Design is the main <br>
@@ -206,6 +214,7 @@
                 </div>
 
                 <div>
+                    <img width="128"  src="assets/cloud-data.png" alt="lakshan">
                     <h5> IOT Based Application</h5>
                     <p>
                         Discover the Next <br>
@@ -216,6 +225,7 @@
                 </div>
 
                 <div>
+                    <img width="128"  src="assets/web-design.png" alt="lakshan">
                     <h5> Graphic Designing</h5>
                     <p>
                         The best designer <br>
@@ -230,6 +240,7 @@
                 </div>
 
                 <div>
+                    <img width="128"  src="assets/coding (1).png" alt="lakshan">
                     <h5> Software Development</h5>
                     <p>
                         Software Development <br>
@@ -270,6 +281,12 @@
             <hgroup>
                 <h1>Blog<bfn id = "Blog"></bfn></h1>
                 <h2>My General Life</h2>
+                <img width="250"  src="assets/IMG-20230128-WA0033.jpg" alt="lakshan">
+                <img width="250"  src="assets/FB_IMG_1679567163402.jpg" alt="lakshan">
+                <img width="250"  src="assets/FB_IMG_1682071177610.jpg" alt="lakshan">
+                <img width="400"  src="assets/IMG-20230426-WA0008.jpg" alt="lakshan">
+                <img width="250"  src="assets/FB_IMG_1648882089113.jpg" alt="lakshan">
+                <img width="400"  src="assets/FB_IMG_1679567150004.jpg" alt="lakshan">
             </hgroup>
             <article>
 
@@ -281,11 +298,15 @@
             <hgroup>
                 <h1>Contact Me<bfn id = "Contact Me"></bfn></h1>
                 <p>
+                    <img width="85"  src="assets/Material Icons_e61d(0)_512.png" alt="lakshan">
                 <h4>Contact Number</h4>
                 <a href="tel:+94713988628">+94713988628</a>
 
+                <img width="85"  src="assets/FontAwesome_f0e0(2)_512.png" alt="lakshan">
                 <h4>Email</h4>
                 <a href="mailto:lakshanrashmika16302@gmail.com">lakshanrashmika16302@gmail.com</a>
+
+                <img width="85"  src="assets/FontAwesome_f041(3)_512.png" alt="lakshan">
 
                 <h4>Your Name :</h4>
                 <h4>Email :</h4>
