add another image

--- a/Case.html
+++ b/Case.html
@@ -115,6 +115,7 @@
         <section>
             <section>
                 <hgroup>
+                    <img width="1341" height="2000" src="assets/Frame 3 (1).png" alt="lakshan">
                     <h1>Education<bfn id = "Education"></bfn></h1>
                     <h2>My Resume</h2>
 
@@ -313,6 +314,8 @@
                 <h4>Massage :</h4>
                 <h4>Follow Me :</h4>
                 <h4>submit</h4>
+
+                <img width="1341" height="600" src="assets/Frame 3.png" alt="lakshan">
 
 
                 </p>
