create Button Project

--- a/Case.html
+++ b/Case.html
@@ -74,8 +74,6 @@
                     Teammates
                 </p>
 
-
-
             </p>
             </hgroup>
 
@@ -176,7 +174,7 @@
                 </p>
 
                 <div>
-                    <img width="128"  src="assets/design.png" alt="lakshan">
+                    <img width="128"  src="assets/coding.png" alt="lakshan">
                     <h5> web design</h5>
                     <p>
                         Develop any kind of <br>
@@ -270,6 +268,7 @@
                 projects and Assignments  I have created
             </p>
                 <ul>
+                    <button>Project and Assigments</button>
                     <li>A - <a href="assignments/23780.zip" download="download pdf1">Download project File</a></li>
 
                 </ul>
