--- a/Case.html
+++ b/Case.html
@@ -153,6 +153,15 @@
             <section>
                 <hgroup>
                     <h1>Languages</h1>
+                    <img width="95"  src="assets/Frame 5.png" alt="lakshan">
+                    <img width="95"  src="assets/Frame 5 (1).png" alt="lakshan">
+                    <img width="95"  src="assets/Frame 5 (2).png" alt="lakshan">
+                    <img width="90"  src="assets/icons8-arduino-144 (1).png" alt="lakshan">
+                    <img width="90"  src="assets/icons8-css-144 (1).png" alt="lakshan">
+                    <img width="90"  src="assets/icons8-figma-144 (1).png" alt="lakshan">
+                    <img width="90"  src="assets/icons8-html-144 (1).png" alt="lakshan">
+                    <img width="95"  src="assets/icons8-javascript-144 (1).png" alt="lakshan">
+                    <img width="90"  src="assets/icons8-wordpress-144 (1).png" alt="lakshan">
                 </hgroup>
             </section>
             <section></section>
