create Contact me page

--- a/Case.html
+++ b/Case.html
@@ -317,11 +317,35 @@
 
                 <img width="85"  src="assets/FontAwesome_f041(3)_512.png" alt="lakshan">
 
-                <h4>Your Name :</h4>
-                <h4>Email :</h4>
-                <h4>Massage :</h4>
-                <h4>Follow Me :</h4>
-                <h4>submit</h4>
+                <form action="Customer Data">
+                    <fieldset>
+                        <legend>Customer Data</legend>
+                        <label for="User Id"> Your Name :</label>
+                        <input id="User Id" type="UserId" placeholder="Enter Your Name">
+
+                        <label for="UserName"> Email :</label>
+                        <input id="UserName" type="email" placeholder="Enter Your Email">
+                        <br>
+                        <br>
+
+                        <label for="Massage">Massage :</label>
+                        <textarea id="Massage" type="Massage" placeholder="Enter Your Massage"></textarea>
+                        <br>
+                        <br>
+
+                        <div>
+                            Follow Me :
+                            <img width="32"  src="assets/icons8-facebook-144.png" alt="lakshan">
+                            <img width="32"  src="assets/icons8-instagram-144.png" alt="lakshan">
+                            <img width="32"  src="assets/icons8-linkedin-144.png" alt="lakshan">
+
+
+                        </div>
+
+                        <button type="submit">Submit</button>
+
+                    </fieldset>
+                </form>
 
                 <img width="1341" height="600" src="assets/Frame 3.png" alt="lakshan">
 
