create image add url

--- a/Case.html
+++ b/Case.html
@@ -307,42 +307,55 @@
             <hgroup>
                 <h1>Contact Me<bfn id = "Contact Me"></bfn></h1>
                 <p>
-                    <img width="85"  src="assets/Material Icons_e61d(0)_512.png" alt="lakshan">
+
                 <h4>Contact Number</h4>
+                <img width="85"  src="assets/Material Icons_e61d(0)_512.png" alt="lakshan">
                 <a href="tel:+94713988628">+94713988628</a>
 
+
+                <h4>location</h4>
                 <img width="85"  src="assets/FontAwesome_f0e0(2)_512.png" alt="lakshan">
-                <h4>Email</h4>
                 <a href="mailto:lakshanrashmika16302@gmail.com">lakshanrashmika16302@gmail.com</a>
 
+                <h4>Email</h4>
                 <img width="85"  src="assets/FontAwesome_f041(3)_512.png" alt="lakshan">
 
-                <form action="Customer Data">
+                <p><a href="https://goo.gl/maps/rYjubxvteB5eBtKT6" target="_blank"> Matara, Sri lanka</a></p>
+
+                <form action="Contact Me">
                     <fieldset>
-                        <legend>Customer Data</legend>
+                        <legend>Contact Me</legend>
                         <label for="User Id"> Your Name :</label>
-                        <input id="User Id" type="UserId" placeholder="Enter Your Name">
+                        <input id="User Id" type="UserId" required placeholder="Enter Your Name">
 
                         <label for="UserName"> Email :</label>
-                        <input id="UserName" type="email" placeholder="Enter Your Email">
+                        <input id="UserName" type="email" required placeholder="Enter Your Email">
                         <br>
                         <br>
 
                         <label for="Massage">Massage :</label>
-                        <textarea id="Massage" type="Massage" placeholder="Enter Your Massage"></textarea>
+                        <textarea id="Massage" type="Massage" required placeholder="Enter Your Massage"></textarea>
                         <br>
                         <br>
 
                         <div>
                             Follow Me :
-                            <img width="32"  src="assets/icons8-facebook-144.png" alt="lakshan">
-                            <img width="32"  src="assets/icons8-instagram-144.png" alt="lakshan">
-                            <img width="32"  src="assets/icons8-linkedin-144.png" alt="lakshan">
+                            <a href="https://www.facebook.com/" target="_blank">
+                                <img width="32"  src="assets/icons8-facebook-144.png" alt="This is a WEBP image">
+                            </a>
 
+                            <a href="https://www.youtube.com/" target="_blank">
+                                <img width="32"  src="assets/icons8-instagram-144.png" alt="This is a WEBP image">
+                            </a>
+
+                            <a href="https://www.linkedin.com/feed/" target="_blank">
+                                <img width="32"  src="assets/icons8-linkedin-144.png" alt="This is a WEBP image">
+                            </a>
 
                         </div>
 
-                        <button type="submit">Submit</button>
+                        <button type="reset"> Clear All</button>
+                        <button type="submit" formaction="SUBMIT">Submit</button>
 
                     </fieldset>
                 </form>
