--- a/Case.html
+++ b/Case.html
@@ -113,7 +113,7 @@
         <section>
             <section>
                 <hgroup>
-                    <img width="1341" height="2000" src="assets/Frame 3 (1).png" alt="lakshan">
+                    <img width="1341" height="1900" src="assets/Frame 45.png" alt="lakshan">
                     <h1>Education<bfn id = "Education"></bfn></h1>
                     <h2>My Resume</h2>
 
@@ -309,18 +309,29 @@
                 <p>
 
                 <h4>Contact Number</h4>
-                <img width="85"  src="assets/Material Icons_e61d(0)_512.png" alt="lakshan">
-                <a href="tel:+94713988628">+94713988628</a>
+                    <a href="tel:+94713988628" target="blank">
+                        <img width="85"  src="assets/Material Icons_e61d(0)_512.png" alt="lakshan">
+                    </a>
+                    <a href="tel:+94713988628">+94713988628</a>
 
-
-                <h4>location</h4>
-                <img width="85"  src="assets/FontAwesome_f0e0(2)_512.png" alt="lakshan">
-                <a href="mailto:lakshanrashmika16302@gmail.com">lakshanrashmika16302@gmail.com</a>
 
                 <h4>Email</h4>
-                <img width="85"  src="assets/FontAwesome_f041(3)_512.png" alt="lakshan">
+                    <a href="mailto:lakshanrashmika16302@gmail.com" target="blank">
+                        <img width="85"  src="assets/FontAwesome_f0e0(2)_512.png" alt="lakshan">
+                    </a>
 
-                <p><a href="https://goo.gl/maps/rYjubxvteB5eBtKT6" target="_blank"> Matara, Sri lanka</a></p>
+                    <p>
+                        <a href="mailto:lakshanrashmika16302@gmail.com">lakshanrashmika16302@gmail.com</a>
+                    </p>
+
+                <h4>Location</h4>
+                <a href="https://www.google.com/maps/place/5%C2%B057'41.3%22N+80%C2%B033'16.6%22E/@5.9614775,80.5520362,17z/data=!3m1!4b1!4m4!3m3!8m2!3d5.9614722!4d80.5546111?entry=ttu" target="blank">
+                    <img width="85"  src="assets/FontAwesome_f041(3)_512.png" alt="lakshan">
+                </a>
+
+                <p>
+                    <a href="https://www.google.com/maps/place/5%C2%B057'41.3%22N+80%C2%B033'16.6%22E/@5.9614775,80.5520362,17z/data=!3m1!4b1!4m4!3m3!8m2!3d5.9614722!4d80.5546111?entry=ttu" target="_blank"> Matara, Sri lanka</a>
+                </p>
 
                 <form action="Contact Me">
                     <fieldset>
@@ -340,15 +351,15 @@
 
                         <div>
                             Follow Me :
-                            <a href="https://www.facebook.com/" target="_blank">
+                            <a href="https://www.facebook.com/" target="blank">
                                 <img width="32"  src="assets/icons8-facebook-144.png" alt="This is a WEBP image">
                             </a>
 
-                            <a href="https://www.youtube.com/" target="_blank">
+                            <a href="https://www.youtube.com/" target="blank">
                                 <img width="32"  src="assets/icons8-instagram-144.png" alt="This is a WEBP image">
                             </a>
 
-                            <a href="https://www.linkedin.com/feed/" target="_blank">
+                            <a href="https://www.linkedin.com/feed/" target="blank">
                                 <img width="32"  src="assets/icons8-linkedin-144.png" alt="This is a WEBP image">
                             </a>
 
