create about me button

--- a/Case.html
+++ b/Case.html
@@ -32,6 +32,11 @@
             I am twenty one years old
 
         </p>
+            <ul>
+                <button>About Me</button>
+
+
+            </ul>
         </section>
 
         <section>
