--- a/Case.html
+++ b/Case.html
@@ -35,6 +35,21 @@
             <ul>
                 <button>About Me</button>
 
+                <a href="https://www.linkedin.com/feed/" target="blank">
+                    <img width="32"  src="assets/FontAwesome_f0e1(1)_48.png" alt="lakshan">
+                </a>
+
+                <a href="https://www.linkedin.com/feed/" target="blank">
+                    <img width="32"  src="assets/Entypo_f32d(2)_48.png" alt="lakshan">
+                </a>
+
+                <a href="https://www.facebook.com/" target="blank">
+                    <img width="32"  src="assets/themify_e741(0)_48.png" alt="lakshan">
+                </a>
+
+                <a href="https://www.linkedin.com/feed/" target="blank">
+                    <img width="32"  src="assets/icons8-discord-48 1.png" alt="lakshan">
+                </a>
 
             </ul>
         </section>
