--- a/Case.html
+++ b/Case.html
@@ -6,6 +6,12 @@
 
     <hader>
         <nav></nav>
+
+        <img width="32"  src="assets/icons8-l-64 (1) 1.png" alt="lakshan">
+        <h4>Lakshan<spam style="color: lightblue" :>R</spam></h4>
+
+
+
         <a href="#Home"><spam style = "color: darkblue":> Home</spam></a><br>
         <a href="#About Me"><spam style = "color: darkblue":> About Me</spam></a><br>
         <a href="#Education"><spam style = "color: darkblue":> Education</spam></a><br>
