--- a/Case.html
+++ b/Case.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Case</title>
 
+    <link rel="stylesheet" href="css/styles.css">
+
+    <style>
+
+    </style>
     <hader>
         <nav></nav>
 
@@ -30,7 +35,9 @@
             <img width="1341" height="780" src="assets/Frame 2.png" alt="lakshan">
             <img width="500"  src="assets/Frame 2 (1).png" alt="lakshan">
             <mark>Hello I'm </mark>
-            <h1>Lakshan <spam style="color: lightblue" :> Rashmika</spam></h1>
+            <la>Lakshan </la>
+            <laks>Rashmika</laks>
+
         <p>
 
                 I am currently studying for a software engineer<br>
@@ -114,9 +121,9 @@
                     <h1>About Me<bfn id = "About Me"></bfn></h1>
                 </hgroup>
                 <p>
-                <h2>
-                I  Can Develop
-                That Help People
+                     <h2>
+                         I  Can Develop
+                         That Help People
                     </h2>
 
                         Hello I am Lakshan Rashmika I began my Software engineer<br>
@@ -126,11 +133,14 @@
                 I enjoy every step of the design process, from discussion and<br>
                 collaboration.
 
-                <pre>
-                Name : Lakshan Rashmika       Address : Matara,Sri Lanka
-                Age : 21 Years                Email : lakshanrashmika16302@gmail.com
-                Contact : +94 71 3988 628     Linked in : Lakshan Rashmika
-                </pre>
+                    <ul>
+                        <li>Name : Lakshan Rashmika</li>
+                        <li>Address : Matara,Sri Lanka</li>
+                        <li>Age : 21 Years </li>
+                        <li>Email : lakshanrashmika16302@gmail.com</li>
+                        <li>Contact : +94 71 3988 628 </li>
+                        <li>Linked in : Lakshan Rashmika </li>
+                    </ul>
                 </p>
 
             </section>
@@ -150,22 +160,22 @@
                         St. Thomas' College, Matara
                     </p>
 
-                    <img width="50"  src="assets/icons8-examination-64.png" alt="lakshan">
-                    <h5>2018-2021</h5>
+                        <img width="50"  src="assets/icons8-examination-64.png" alt="lakshan">
+                        <h5>2018-2021</h5>
                     <p>
                         G.C.E Advanced Level Examination <br>
                         St. Thomas' College, Matara
                     </p>
 
-                    <h5>2021-2024</h5>
-                    <img width="50"  src="assets/icons8-diploma-94.png" alt="lakshan">
+                        <h5>2021-2024</h5>
+                        <img width="50"  src="assets/icons8-diploma-94.png" alt="lakshan">
                     <p>
                         Graduate Diploma in Software Engineering <br>
                         Institute of Java Software Engineering
                     </p>
 
-                    <img width="50"  src="assets/icons8-degree-94.png" alt="lakshan">
-                    <h5>2024-2025</h5>
+                        <img width="50"  src="assets/icons8-degree-94.png" alt="lakshan">
+                        <h5>2024-2025</h5>
                     <p>
                         Software Engineering Degree <br>
                         Institute of Java Software Engineering
@@ -412,6 +422,5 @@
 
 </head>
 <body>
-
 </body>
 </html>
