--- a/assignments/CSS/Case 1/index.html
+++ b/assignments/CSS/Case 1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="necolas.github.io_normalize.css_8.0.1_normalize.css">
     <style>
         body>section{
             width: 100vw;
@@ -129,6 +129,7 @@
 
 
     </style>
+
 </head>
 
 
