--- a/assignments/CSS/Case 2/index.html
+++ b/assignments/CSS/Case 2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="necolas.github.io_normalize.css_8.0.1_normalize.css">
+    <link rel="stylesheet" href="assets/necolas.github.io_normalize.css_8.0.1_normalize.css">
 
     <style>
         header{
@@ -109,7 +109,7 @@
 <body>
 
 <header>
-    <img src="ijse.png">
+    <img src="image/ijse.png">
     <nav>
         <ul>
             <li><i class="fa-solid fa-house"></i><a href="#">Home</a></li>
@@ -132,9 +132,9 @@
     </nav>
     <section>
         <section>
-            <div><img src="img2.jpg" alt="pic1"></div>
-            <div><img src="img2.jpg" alt="pic1"></div>
-            <div><img src="img2.jpg" alt="pic1"></div>
+            <div><img src="image/img2.jpg" alt="pic1"></div>
+            <div><img src="image/img2.jpg" alt="pic1"></div>
+            <div><img src="image/img2.jpg" alt="pic1"></div>
         </section>
     <section>
         <p>
