--- a/assignments/CSS/Case 3/index.html
+++ b/assignments/CSS/Case 3/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link rel="stylesheet" href="necolas.github.io_normalize.css_8.0.1_normalize.css">
+  <link rel="stylesheet" href="assets/necolas.github.io_normalize.css_8.0.1_normalize.css">
 
   <style>
     main>div:nth-child(2){
