--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="them-color" content="red">
     <meta name="robots" content="index,follow">
     <meta name="canonical" href = "http://lakshanrashmika.rf.gd/?i=1/">
+
     <link rel="stylesheet" href="css/necolas.github.io_normalize.css_8.0.1_normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 
@@ -20,6 +21,7 @@
 
 <body>
 
+<!--        sectioning root-->
     <hader>
         <nav></nav>
 
@@ -37,13 +39,10 @@
     </hader>
 
     <main>
-        <section>
 
-            <asid></asid>
-        </section>
-
+<!--        header section-->
         <section>
-            <img width="1341" height="780" src="assets/Frame 2.png" alt="lakshan">
+            <img width="1349" height="780" src="assets/Frame 2.png" alt="lakshan">
             <img width="500"  src="assets/Frame 2 (1).png" alt="lakshan">
             <mark>Hello I'm </mark>
             <la>Lakshan </la>
@@ -78,13 +77,14 @@
             </ul>
         </section>
 
+<!--        features section-->
         <section>
-            <hgroup>
                 <p>
 
                 <h2>Features</h2>
-                Ultimate Work Flow
+
                 <p>
+                    Ultimate Work Flow <br>
                     Make More Time For The Word That Matters Most
                 </p>
                 <img width="64"  src="assets/icons8-ideas-64 (1).png" alt="lakshan">
@@ -119,11 +119,11 @@
                 </p>
 
                 </p>
-            </hgroup>
 
             <article></article>
         </section>
 
+<!--        about me section-->
         <section>
             <aside></aside>
             <section>
@@ -157,6 +157,7 @@
             </section>
         </section>
 
+<!--        education section-->
         <section>
             <section>
                 <hgroup>
@@ -215,6 +216,7 @@
 
         </section>
 
+<!--        my expertise section-->
         <section>
             <hgroup>
 
@@ -312,6 +314,7 @@
 
         </section>
 
+<!--        project section-->
         <section>
             <hgroup>
 
@@ -333,6 +336,7 @@
 
         </section>
 
+<!--        blog section-->
         <section>
             <hgroup>
                 <h1>Blog<bfn id = "Blog"></bfn></h1>
@@ -350,6 +354,7 @@
             <section></section>
         </section>
 
+<!--        contact section-->
         <section>
             <hgroup>
                 <h1>Contact Me<bfn id = "Contact Me"></bfn></h1>
