--- a/index.html
+++ b/index.html
@@ -22,21 +22,20 @@
 <body>
 
 <!--        sectioning root-->
-    <hader>
-        <nav></nav>
-
-        <img width="32"  src="assets/icons8-l-64 (1) 1.png" alt="lakshan">
-        <h4>Lakshan<spam style="color: lightblue" :>R</spam></h4>
-
-
-
-        <a href="#Home"><spam style = "color: darkblue":> Home</spam></a><br>
-        <a href="#About Me"><spam style = "color: darkblue":> About Me</spam></a><br>
-        <a href="#Education"><spam style = "color: darkblue":> Education</spam></a><br>
-        <a href="#Project"><spam style = "color: darkblue":> Project</spam></a><br>
-        <a href="#Blog"><spam style = "color: darkblue":> Blog</spam></a><br>
-        <a href="#Contact Me"><spam style = "color: darkblue":> Contact Me</spam></a><br>
-    </hader>
+    <header>
+        <img src="assets/Frame 14 (1).png" height="107" width="314"/>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#aboutMe">About Me</a></li>
+                <li><a href="#expertise">Expertise</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contactMe" style="color: white;">Contact Me</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
 
