--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!--        sectioning root-->
     <header>
-        <img src="assets/Frame 14 (1).png" height="107" width="314"/>
+        <img src="assets/Frame 14 (2).png" style="width: 10%"/>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
